# demo-rust-learning

./: .gitignore  Cargo.toml  README.md
assets/: test.json
src/guessing/: guessing_game.rs
src/hello/: main.rs
src/rocket/: hello.rs  request.rs
src/serde/: assemble.rs  export.rs
