[package]
name = "rust-learning"
version = "0.1.0"
authors = ["victor <roliveira.victor@gmail.com>"]

[dependencies]
rocket = "0.4.1"
hyper = "0.11"
tokio-core = "0.1"
futures = "0.1"
serde_json = "1.0.39"
serde = { version = "1.0.92", features = ["derive"] }

[profile.dev]
codegen-units = 8

[[bin]]
name = "hello"
path = "src/rocket/hello.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "assemble"
path = "src/serde/assemble.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "request"
path = "src/rocket/request.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "guessing"
path = "src/guessing/game.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "main"
path = "src/hello/main.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false
