[package]
name = "rust-learning"
version = "0.1.0"
authors = ["victor <roliveira.victor@gmail.com>"]

[dependencies]
rocket = "0.4.1"
hyper = "0.11"
tokio-core = "0.1"
futures = "0.1"
serde = "1.0.94"
serde_json = "1.0.39"

[profile.dev]
codegen-units = 8

[[bin]]
name = "export"
path = "src/serde/export.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "hello"
path = "src/rocket/hello.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "request"
path = "src/rocket/request.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "guessing"
path = "src/guessing/game.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false

[[bin]]
name = "main"
path = "src/hello/main.rs"
test = true
doctest = false
bench = true
doc = false
plugin = false
proc-macro = false
harness = false
